# MiroFish-Offline

./: .env.example  .gitignore  Dockerfile
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: graph_builder.py  graph_maintenance.py  graph_tools.py  oasis_profile_generator.py  report_agent.py  simulation_config_generator.py  simulation_runner.py  text_processor.py
backend/app/storage/: __init__.py  embedding_service.py  entity_normalize.py  graph_storage.py  graphiti_ontology.py  graphiti_storage.py  merge_adjudicator.py  neo4j_schema.py  neo4j_storage.py  ner_extractor.py  relation_temporal_filters.py  search_service.py
backend/app/utils/: file_parser.py  ingest_admin_stats.py  ingest_counters.py  ingest_metrics.py  llm_client.py  llm_ingest_concurrency.py  rate_limiter.py
docs/: ZEP_STYLE_MEMORY_ROADMAP.md  graphiti-cutover.md
docs/golden-set/: NER_MAX_OUTPUT_TOKENS.md  README.md  entity-aliases.example.json  ontology-min.json  sample-01-org.txt  sample-02-policy.txt  sample-03-tiny.txt
frontend/: CHINESE_TEXT_INVENTORY.md
frontend/src/api/: graph.js  index.js  simulation.js
frontend/src/components/: Step3Simulation.vue
scripts/: snapshot_golden_counts.py
