[project]
name = "mirofish-offline-backend"
version = "0.2.0"
description = "MiroFish-Offline - Offline-first fork running on Neo4j + Ollama"
# camel-oasis pins Requires-Python <3.12 — use 3.11.x until upstream supports 3.12+
requires-python = ">=3.11,<3.12"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Core web framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM (OpenAI-compatible API)
    "openai>=1.0.0",

    # Neo4j graph database driver
    "neo4j>=5.15.0",

    # Graphiti temporal graph engine (use GRAPH_BACKEND=graphiti)
    "graphiti-core>=0.28.0,<0.29",

    # OASIS social simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # File parsing
    "PyMuPDF>=1.24.0",
    # Encoding detection for non-UTF-8 text files
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
